fixed bottom gap

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,10 +8,10 @@
 
 @keyframes moveRight {
   0% {
-    transform: translateX(-40%);
+    transform: translateX(-30%);
   }
   50% {
-    transform: translateX(20%);
+    transform: translateX(10%);
   }
   100% {
     transform: translateX(0%);
@@ -28,10 +28,10 @@
 
 @keyframes moveLeft {
   0% {
-    transform: translateX(30%);
+    transform: translateX(10%);
   }
   50% {
-    transform: translateX(-20%);
+    transform: translateX(-10%);
   }
   100% {
     transform: translateX(0%);
@@ -47,7 +47,7 @@
     transform: translateY(50%);
   }
   50% {
-    transform: translateY(-20%);
+    transform: translateY(-10%);
   }
   100% {
     transform: translateY(0%);
